# XTDrone2

./: .gitignore  .gitmodules  LICENSE  README.md  README_en.md
docs/: DDS_Topics_Manual.md  InstallationTutorial.md  Schedule.md  Workflow.md
xtd2_communication/: package.xml  setup.cfg  setup.py
xtd2_communication/xtd2_communication/: multirotor_communication.py  multirotor_communication_ros2.py  plane_communication_ros2.py  rover_communication.py  rover_communication_ros2.py
xtd2_control/: package.xml  setup.cfg  setup.py
xtd2_control/xtd2_control/keyboard/: multirotor_keyboard_control.py  rover_keyboard_control.py
xtd2_gz_sim/: package.xml  setup.cfg  setup.py
xtd2_gz_sim/models/OakD-Lite/: model.sdf
xtd2_gz_sim/models/x500/: model.sdf
xtd2_gz_sim/worlds/: indoor1.sdf
xtd2_launch/: demo_launch.py  package.xml  setup.cfg  setup.py
xtd2_launch/launch/: gz_launch.py  ros2_multi_vehicle_demo_launch.py  ros2_single_vehicle_demo_launch.py  xtd2_vehicle_spawn_launch.py  yaml_demo_launch.py
xtd2_launch/launch/launch_config/: default.yaml  ros_gz_bridge.yaml
xtd2_launch/xtd2_launch/utils/: bridge_launch.py  gazebo_launch.py  px4_launch.py
xtd2_launch/xtd2_launch_utils/: utils.py
xtd2_msgs/: CMakeLists.txt  package.xml
xtd2_msgs/msg/: XTD2VehicleState.msg
xtd2_test/: package.xml  setup.cfg  setup.py
xtd2_test/xtd2_test/communication_test/: accel_test.py
xtdrone2/: package.xml  setup.cfg  setup.py
xtdrone2/launch/: ros2_demo_launch.py  ros2_multi_vehicle_demo_launch.py  ros2_single_vehicle_demo_launch.py  yaml_demo_launch.py
xtdrone2/xtdrone2/: offboard_control_demo.py
xtdrone2/xtdrone2/bringup/: gazebo_launch.py  px4_launch.py
xtdrone2/xtdrone2/communication/: multirotor_communication.py
xtdrone2/xtdrone2/keyboard_control/: multirotor_keyboard_control.py
