<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xtd2_gz_sim</name>
  <version>0.0.0</version>
  <description>XTDrone2 Gazebo simulation package</description>
  <maintainer email="139300141+ha0xin@users.noreply.github.com">haoxin</maintainer>
  <license>MIT</license>

  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
