<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xtdrone2</name>
  <version>0.0.0</version>
  <description>XTDrone2 package</description>
  <maintainer email="zhuoan@stu.pku.edu.cn">Andy Zhuo</maintainer>
  <license>MIT</license>

  <exec_depend>xtd2_msgs</exec_depend>
  <exec_depend>xtd2_communication</exec_depend>
  <exec_depend>xtd2_control</exec_depend>
  <exec_depend>xtd2_launch</exec_depend>
  <exec_depend>xtd2_test</exec_depend>
  <exec_depend>xtd2_gz_sim</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
